# conZero-Jet

./: .env  .gitignore  LED.py  README.md  license  motor_config.json  paired_remotes.json  pyproject.toml  requirements-current.txt  setup_production.sh  splash.sh  start_conzero.sh  test_all_faults.py  test_all_faults_exact.py  test_faults_display.py
src/: config.py  connectivity.py  conzero_jet_ui.py  error_handler.py  gpio_handler.py  main.py  mode_manager.py  requirements.txt  serial_test.py  uart_manager.py  ultimate_gpio_reset.py
src/core/: app_state.py  config.py  mode_manager.py  translations.py
src/hardware/: connectivity.py  gpio_handler.py  uart_manager.py  wave.py
src/services/: fault_service.py  motor_service.py
src/ui_handlers/: conzero_jet_ui.py
